[gd_scene load_steps=2 format=3 uid="uid://44u1hu8lt1at"]

[ext_resource type="Script" uid="uid://d0fx2q6weo65v" path="res://addons/gitbash_terminal/scenes/git_bash_terminal_button.gd" id="1_h8ler"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = 648.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h8ler")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
scroll_following = true
context_menu_enabled = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="LaunchButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Launch Terminal"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TerminalLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "On branch master
"
keep_editing_on_text_submit = true
caret_blink = true

[node name="clear" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Clear"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="StatusButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Git Status"

[node name="DiffButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Git Diff"

[node name="LogButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Git Log"

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Git Add"

[node name="AmmendButton" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Git Ammend"
